--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,11 @@
       <version>6.11</version>
       <scope>compile</scope>
     </dependency>
-  </dependencies>
+    <!-- https://mvnrepository.com/artifact/ddf.platform.util/platform-util -->
+<dependency>
+    <groupId>ddf.platform.util</groupId>
+    <artifactId>platform-util</artifactId>
+    <version>2.9.2</version>
+</dependency>
+ </dependencies>
 </project>
